--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; pySmash v0.1 documentation</title>
+    <title>Index &#8212; PySmash v1.0 documentation</title>
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -28,7 +28,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">pySmash v0.1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">PySmash v1.0 documentation</a> &#187;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
@@ -57,6 +57,7 @@
 <div class="genindex-jumpbox">
  <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#N"><strong>N</strong></a>
@@ -80,6 +81,20 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/smash.html#smash.CircularLearner">CircularLearner (class in smash)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/smash.fragments.html#smash.fragments.functionGroup.DrawFgEnv">DrawFgEnv() (in module smash.fragments.functionGroup)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/smash.fragments.html#smash.fragments.circular.DrawMorganEnv">DrawMorganEnv() (in module smash.fragments.circular)</a>
+</li>
+      <li><a href="modules/smash.fragments.html#smash.fragments.path.DrawRDKitEnv">DrawRDKitEnv() (in module smash.fragments.path)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -126,7 +141,7 @@
 </li>
         <li><a href="modules/smash.html#smash.FunctionGroupLearner.GetMatrix">(smash.FunctionGroupLearner method)</a>
 </li>
-        <li><a href="modules/smash.html#smash.PathLeanrner.GetMatrix">(smash.PathLeanrner method)</a>
+        <li><a href="modules/smash.html#smash.PathLearner.GetMatrix">(smash.PathLearner method)</a>
 </li>
       </ul></li>
       <li><a href="modules/smash.fragments.html#smash.fragments.path.GetPathFragment">GetPathFragment() (in module smash.fragments.path)</a>
@@ -155,7 +170,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/smash.fragments.html#smash.fragments.Path">Path (class in smash.fragments)</a>
 </li>
-      <li><a href="modules/smash.html#smash.PathLeanrner">PathLeanrner (class in smash)</a>
+      <li><a href="modules/smash.html#smash.PathLearner">PathLearner (class in smash)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -173,10 +188,26 @@
 </li>
       <li><a href="modules/smash.html#smash.BaseLearner.savePvalue">savePvalue() (smash.BaseLearner method)</a>
 </li>
-      <li><a href="modules/smash.html#module-smash">smash (module)</a>
+      <li><a href="modules/smash.fragments.html#smash.fragments.Circular.ShowCircularFragment">ShowCircularFragment() (smash.fragments.Circular method)</a>
 </li>
+      <li><a href="modules/smash.fragments.html#smash.fragments.FunctionGroup.ShowFgFragment">ShowFgFragment() (smash.fragments.FunctionGroup method)</a>
+</li>
+      <li><a href="modules/smash.html#smash.BaseLearner.ShowFragment">ShowFragment() (smash.BaseLearner method)</a>
+
+      <ul>
+        <li><a href="modules/smash.html#smash.CircularLearner.ShowFragment">(smash.CircularLearner method)</a>
+</li>
+        <li><a href="modules/smash.html#smash.FunctionGroupLearner.ShowFragment">(smash.FunctionGroupLearner method)</a>
+</li>
+        <li><a href="modules/smash.html#smash.PathLearner.ShowFragment">(smash.PathLearner method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/smash.fragments.html#smash.fragments.Path.ShowPathFragment">ShowPathFragment() (smash.fragments.Path method)</a>
+</li>
+      <li><a href="modules/smash.html#module-smash">smash (module)</a>
+</li>
       <li><a href="modules/smash.fragments.html#module-smash.fragments">smash.fragments (module)</a>
 </li>
       <li><a href="modules/smash.fragments.html#module-smash.fragments.circular">smash.fragments.circular (module)</a>
@@ -204,11 +235,11 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">pySmash v0.1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">PySmash v1.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2020, Kotori_y.
+        &#169; Copyright 2020, Kotori Yang.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.3.0.
     </div>
   </body>
